Make sure the carousel isn't too tall and put the icons in a div that stays centered vertically

--- a/_sass/_carousel.scss
+++ b/_sass/_carousel.scss
@@ -137,3 +137,12 @@
     background-image: url("/static/images/background/split.jpg");
   }
 }
+
+@media (min-width:501px) and (max-width:800px) and (orientation: portrait) {
+  .top-bg-stack, #top, #top-container {
+    height: 100vw;
+    max-height: 100vw;
+    padding-bottom: 0;
+    padding-top: 0;
+  }
+}
